--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "5.0.0",
+    "redux": "^3.7.2",
     "web-vitals": "^2.1.2"
   },
+  "proxy": "http://localhost:3000/api",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -34,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "redux-thunk": "^2.2.0",
+    "sass": "^1.45.1"
   }
 }
